--- a/app/src/main/res/layout/include_movie_cast_details_card.xml
+++ b/app/src/main/res/layout/include_movie_cast_details_card.xml
@@ -1,4 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ Copyright 2016 Derrick Njeru
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~    http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -65,7 +80,7 @@
                 android:layout_marginLeft="56dp"
                 android:layout_marginTop="-8dp"
                 android:maxLines="2"
-                android:text="Derrick" />
+                android:text="@string/caster_name" />
 
             <TextView
                 android:id="@+id/txt2_title1_cast"
@@ -75,7 +90,7 @@
                 android:layout_marginLeft="56dp"
                 android:layout_marginTop="10dp"
                 android:maxLines="2"
-                android:text="Derrick2" />
+                android:text="@string/role_name" />
 
         </FrameLayout>
 
@@ -103,7 +118,7 @@
                 android:layout_marginLeft="56dp"
                 android:layout_marginTop="-8dp"
                 android:maxLines="2"
-                android:text="Derrick" />
+                android:text="@string/caster_name" />
 
             <TextView
                 android:id="@+id/txt2_title2_cast"
@@ -113,7 +128,7 @@
                 android:layout_marginLeft="56dp"
                 android:layout_marginTop="10dp"
                 android:maxLines="2"
-                android:text="Derrick2" />
+                android:text="@string/role_name" />
 
         </FrameLayout>
 
@@ -141,7 +156,7 @@
                 android:layout_marginLeft="56dp"
                 android:layout_marginTop="-8dp"
                 android:maxLines="2"
-                android:text="Derrick" />
+                android:text="@string/caster_name" />
 
             <TextView
                 android:id="@+id/txt2_title3_cast"
@@ -151,7 +166,7 @@
                 android:layout_marginLeft="56dp"
                 android:layout_marginTop="10dp"
                 android:maxLines="2"
-                android:text="Derrick2" />
+                android:text="@string/role_name" />
 
         </FrameLayout>
 
